--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ nav .menu-principal{
 
 .logo img{
     font-size: 40px;
+    cursor: pointer;
 }
 
 nav .izquierda .input{
@@ -46,9 +47,15 @@ nav .izquierda .input{
 }
 
 nav .izquierda .input input{
+    outline: none;
     width: 240px;
     border: none;
     background: transparent;
+}
+
+nav .izquierda .input input:focus{
+    width: 400px;
+    transition-duration: 0.3s;
 }
 
 nav .izquierda .input input::placeholder{
@@ -68,17 +75,14 @@ nav .derecha .inicio,
 nav .derecha .mi-red,
 nav .derecha .empleos,
 nav .derecha .mensajes,
-nav .derecha .notificaciones{
+nav .derecha .notificaciones,
+nav .derecha .productos{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 8px;
-}
-
-nav .derecha .productos{
-    display: flex;
-    flex-wrap: wrap;
+    cursor: pointer;
 }
 
 nav .derecha .inicio img,
@@ -87,11 +91,12 @@ nav .derecha .empleos img,
 nav .derecha .mensajes img,
 nav .derecha .notificaciones img,
 nav .derecha .productos .img-productor{
-    font-size: 24px;    
+    font-size: 24px;       
 }
 
 nav .derecha .usuario .foto-perfil{
     display: flex;
+    cursor: pointer;
     justify-content: center;
     align-items: center;
     border-radius: 15px;        
@@ -100,20 +105,22 @@ nav .derecha .usuario .foto-perfil{
 nav .derecha .usuario h6,
 nav .derecha .productos h6{
     margin: 0;
+    cursor: pointer;
     display: flex;
     justify-content: center;
-    align-items: left;
+    align-items: center;
 }
 
 nav .derecha .usuario .flecha-abajo{
     display: flex;
     justify-content: center;
-    align-items: right;
+    align-items: center;
+    cursor: pointer;
 }
 
 nav .derecha .productos .img-productor{
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
 }
 
@@ -126,6 +133,21 @@ nav .derecha .productos .flecha-abajo{
 
 nav .derecha a{
     color: #915907;
+    font-size: 12px;
 }
 
+/*Configuración Barra izquierda*/
 
+.container{
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    gap: 32px;
+    width: 80%;
+    margin: 16px auto;
+}
+
+.barra-izquierda{
+    background: #fff;
+    width: 100%;
+    height: 900px
+}
