--- a/css/style.css
+++ b/css/style.css
@@ -140,14 +140,91 @@ nav .derecha a{
 
 .container{
     display: grid;
-    grid-template-columns: 25% 50% 25%;
+    grid-template-columns: 20% 60% 20%;
     gap: 32px;
     width: 80%;
-    margin: 16px auto;
+    margin: 30px auto;
 }
 
 .barra-izquierda{
     background: #fff;
     width: 100%;
-    height: 900px
+    height: 900px;
+    position: relative;
+    border-radius: 12px; 
+    overflow: hidden;
+}
+
+.barra-izquierda .foto-portada{
+    width: 100%;
+    height: 60px;
+    position: absolute;
+}
+
+.barra-izquierda .foto-perfil-barra{
+    position: relative;
+    left: 50%;
+    transform:translate(-50%);
+    top: 3%;
+    border-radius: 50px;
+    width: 64px;
+    height: 64px;
+    border: 2px solid white;    
+}
+
+.barra-izquierda .perfil{
+    position: relative;
+    text-align: center;
+    top: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    border-bottom: 1px solid #B9B9B9;
+    height: 60px;
+}
+
+.barra-izquierda .perfil a{
+    text-decoration: none;
+    color: black;
+
+}
+
+.barra-izquierda .perfil a:hover{
+    text-decoration: underline blueviolet;
+
+}
+
+.barra-izquierda .perfil small{
+    font-size: 11px;
+    color: gray;
+}
+
+.barra-izquierda .barra-contactos{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 0 16px;
+    top: 6%;
+    cursor: pointer;
+}
+
+.barra-izquierda .barra-contactos:hover{
+    background: rgba(0, 0, 0, 0.1); 
+}
+
+.barra-izquierda .barra-contactos .contactos .numero-de-contactos{
+    color: #0a66c2;    
+}
+
+.barra-izquierda .barra-contactos .contactos a{
+    text-decoration: none;
+    color: black;
+}
+
+.barra-izquierda .barra-contactos .contactos{
+    display: flex;    
+    align-items: center;
+    justify-content: space-between;
+    margin: 2px;   
 }
