--- a/css/style.css
+++ b/css/style.css
@@ -204,9 +204,10 @@ nav .derecha a{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding: 0 16px;
+    padding: 8px 8px 16px 8px;     
     top: 6%;
     cursor: pointer;
+    border-bottom: 1px solid #B9B9B9
 }
 
 .barra-izquierda .barra-contactos:hover{
@@ -225,6 +226,42 @@ nav .derecha a{
 .barra-izquierda .barra-contactos .contactos{
     display: flex;    
     align-items: center;
-    justify-content: space-between;
-    margin: 2px;   
+    justify-content: space-between;  
 }
+
+.barra-izquierda .premium{
+    position: relative;
+    top: 7%;    
+    border-bottom: 1px solid #B9B9B9;
+    padding-bottom: 8px;
+}
+
+.barra-izquierda .premium:hover{
+    background: rgba(0, 0, 0, 0.1); 
+    cursor: pointer;
+}
+
+.barra-izquierda .premium h6{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-left: 16px;
+    color: rgba(0,0,0,0.6);
+    font-weight: 100;
+}
+
+.barra-izquierda .premium img{
+    gap: 8px;
+    width: 16px;
+    height: 16px;
+    margin-left: 16px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.barra-izquierda .premium a{   
+    align-items: center;        
+    color: rgba(0,0,0,0.9);
+}
+
+
