--- a/css/style.css
+++ b/css/style.css
@@ -426,11 +426,6 @@ main .tipos-de-publicaciones .articulo:hover{
     border-radius: 5px;
 }
 
-
-
-
-
-
 /*Se configura el aside*/
 
 aside{
@@ -439,6 +434,45 @@ aside{
     height: 500px;
 }
 
+aside .barra-noticias{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 16px;
 
+}
 
+aside .barra-noticias h2{
+    font-size: 18px;    
+}
 
+aside .noticias-recientes{
+    margin: 16px 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+}
+
+aside .noticias-recientes .uno{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    font-size: 15px;
+}
+
+aside .noticias-recientes .uno img{
+    width: 5px;
+    height: 5px;
+}
+
+aside .noticias-recientes .dos{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-top: 5px;
+    color: rgba(0,0,0,0.6);;
+}
+aside .noticias-recientes .dos img{
+    width: 3px;
+    height: 3px;
+}
