--- a/css/style.css
+++ b/css/style.css
@@ -145,10 +145,10 @@ nav .derecha a{
 
 .container{
     display: grid;
-    grid-template-columns: 20% 52% 28%;
+    grid-template-columns: 225px 580px 300px;
     gap: 32px;
-    width: 80%;
-    margin: 30px auto;
+    width: 1169px;
+    margin: 32px auto;
 }
 
 .barra-izquierda .izq-arriba{
@@ -426,12 +426,180 @@ main .tipos-de-publicaciones .articulo:hover{
     border-radius: 5px;
 }
 
-/*Se configura el aside*/
-
-aside{
+main .post-uno{
     background: #fff;
     border-radius: 12px;
-    height: 350px;
+    height: 680px;
+    margin-top: 16px;
+}
+
+main .post-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 24px;
+    padding-right: 24px;
+    padding-left: 24px;
+    padding-bottom: 8px;
+}
+
+main .post-info{
+    display: flex;    
+    justify-content: space-between;
+}
+
+main .post-info img{
+    width: 60px;
+    height: 60px;
+    align-items: center;
+}
+
+main .post-top .cuerpo-post{
+    margin-left: 8px; 
+    margin-top: 5px;   
+}
+
+main .post-top .cuerpo-post a{    
+    font-size: 14px;
+    font-weight: 100;
+    color: black;
+    text-decoration: none;
+}
+
+main .post-top .cuerpo-post p{
+    color: rgba(0,0,0,0.6);
+}
+
+main .post-uno .tres-puntos{
+    padding: 5px;
+}
+
+main .post-uno .tres-puntos:hover{
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 50%;
+}
+
+main .post-uno .descripcion-post{
+    margin-left: 24px;
+    margin-bottom: 24px;
+}
+
+main .post-uno .img-central{
+    width: 100%;    
+}
+
+main .post-uno .pie-foto{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background-color: #eef3f8;
+    padding: 0 8px;
+    cursor: pointer;
+}
+
+main .post-uno .pie-foto .contenido-pie h5{
+    margin-bottom: 8px;
+}
+
+main .post-uno .pie-foto .contenido-pie small{
+    margin-top: 16px;
+    color: rgba(0,0,0,0.6);
+}
+
+main .post-uno .reacciones{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8px;
+    padding-left: 8px;   
+}
+
+main .post-uno .reacciones .acciones-realizadas img{
+    position: relative;
+    width: 16px;
+    height: 16px; 
+        
+}
+
+main .post-uno .reacciones .acciones-realizadas a{
+    color: rgba(0,0,0,0.6);
+    cursor: pointer;
+    text-decoration: none;
+}
+
+main .post-uno .reacciones .acciones-realizadas a:hover{
+    text-decoration: underline;
+}
+
+main .post-uno .reacciones .estadisticas{
+    display: flex;   
+    padding-right: 16px;
+    align-items: center;
+}
+
+main .post-uno .reacciones .estadisticas small{
+    color: rgba(0,0,0,0.6);
+    cursor: pointer;    
+}
+
+main .post-uno .reacciones .estadisticas small:hover{
+    text-decoration: underline;
+}
+
+main .post-uno .reacciones .estadisticas img{
+    width: 3px;
+    height: 3px;
+    padding: 3px;
+}
+
+main .post-uno .acciones{
+    display: flex;
+    padding: 12px;
+    margin: 12px;
+    border-top: 1px solid #B9B9B9;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main .post-uno .acciones .accion-like,
+main .post-uno .acciones .accion-comentar,
+main .post-uno .acciones .accion-compartir,
+main .post-uno .acciones .accion-enviar{
+    display: flex;
+    align-items: center;
+    padding: 8px; 
+}
+
+main .post-uno .acciones .accion-like:hover,
+main .post-uno .acciones .accion-comentar:hover,
+main .post-uno .acciones .accion-compartir:hover,
+main .post-uno .acciones .accion-enviar:hover{
+    background-color: rgba(0,0,0,0.1);
+    cursor: pointer;
+    border-radius: 4px;   
+}
+
+
+main .post-uno .acciones .accion-like img,
+main .post-uno .acciones .accion-comentar img,
+main .post-uno .acciones .accion-compartir img,
+main .post-uno .acciones .accion-enviar img{
+    padding-right: 8px;
+}
+
+/*Se configura el aside*/
+
+aside{    
+    border-radius: 12px;    
+}
+
+.der-arriba{
+    margin-bottom: 32px;
+    background: #fff;
+    border-radius: 12px;
+    padding: 16px 8px;
 }
 
 aside .barra-noticias{
@@ -493,6 +661,7 @@ aside .mostrar-mas{
     margin-top: 16px;
     margin-left: 32px;    
     padding: 5px;
+    width: fit-content;
 }
 
 aside .mostrar-mas:hover{
@@ -582,7 +751,6 @@ aside .der-medio .boton-seguir{
     justify-content: center;
     text-align: center;
     padding: 8px;
-
 }
 
 aside .der-medio .boton-seguir button{
@@ -592,17 +760,18 @@ aside .der-medio .boton-seguir button{
     border-radius: 16px;  
     cursor: pointer;
     text-align: center;
-    font-size: 20px;    
+    font-size: 20px;
+    padding: 4px 8px;    
 }
 
 aside .footer{
     display: flex;
     text-align: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
-    margin-top: 24px;    
-    height: 750px;
-    gap: 5px;       
+    margin-top: 24px;        
+    gap: 5px; 
+    flex-wrap: wrap;      
 }
 
 .footer a{
@@ -611,4 +780,3 @@ aside .footer{
     text-decoration: none;
     color: rgba(0,0,0,0.6)    
 }
-
